--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
  
 <body>
-  <h1>Samy Taha/h1>
+  <h1>Samy Taha</h1>
   <p>we are who we choose to become.</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
