--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  
 <body>
   <h1>Samy Taha</h1>
-  <p>we are who we choose to become.</p>
+ <h2>we are who we choose to become.</h2>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
  
