update external stylesheet and metadata index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+ <head>
+   <meta charset='UTF-8'>
+   <link rel='stylesheet' href:'zemoonmonkey/index.css'>
  
 <body>
   <h1>Samy Taha</h1>
