--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
  <head>
    <meta charset='UTF-8'>
-   <link rel='stylesheet' href:'zemoonmonkey/index.css'>
+   <link rel='stylesheet' href:'index.css'>
  
 <body>
   <h1>Samy Taha</h1>
